--- a/buildrump/AUTHORS
+++ b/buildrump/AUTHORS
@@ -5,3 +5,5 @@ Jens Staal <staal1978@gmail.com>
 Justin Cormack <justin@specialbusservice.com>
 Alessio Sergi <al3hex@gmail.com>
 Alexander Guy <alexander.guy@andern.org>
+Robert Millan <rmh@gnu.org>
+Viktor Pocedulic <viktor.pocedulic@gmail.com>
