sync the latest buildrump.sh from libos-nuse/buildrump.sh
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/buildrump/AUTHORS
+++ b/buildrump/AUTHORS
@@ -7,3 +7,4 @@ Alessio Sergi <al3hex@gmail.com>
 Alexander Guy <alexander.guy@andern.org>
 Robert Millan <rmh@gnu.org>
 Viktor Pocedulic <viktor.pocedulic@gmail.com>
+David Michael <fedora.dm0@gmail.com>
