sync rumpkernel/buildrump.sh#78
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/buildrump/AUTHORS
+++ b/buildrump/AUTHORS
@@ -8,3 +8,4 @@ Alexander Guy <alexander.guy@andern.org>
 Robert Millan <rmh@gnu.org>
 Viktor Pocedulic <viktor.pocedulic@gmail.com>
 David Michael <fedora.dm0@gmail.com>
+Mahdi Mokhtari <mmokhi@FreeBSD.org>
